# DH2024

./: LICENSE  README.md  Rocket.toml
backend/: Cargo.toml  DHBackend.service  Dockerfile
backend/public/: styles.css
backend/src/: ai.rs  db.rs  main.rs  routes.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  auth_config.json  index.css  main.jsx
frontend/src/components/: ContactPaper.jsx  FakeUser.jsx  Header.jsx  Introduction.jsx  LoginButton.jsx  Navigation.jsx  Profile.jsx  SkillsMastered.jsx  SkillsNeeded.jsx  UserCard.jsx  UserCard_copy.jsx  UsersLayout.jsx
frontend/src/pages/: HomePage.jsx  Onboarding.jsx  PeopleView.jsx
perplexity/: parsingscript.py
