[package]
name = "DHBackend"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
rocket = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.mongodb]
version = "3.0.1"
