[package]
name = "DHBackend"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.0"
reqwest = "0.12.8"

[dependencies.rocket]
rocket = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.mongodb]
version = "3.0.1"
